fixed mobile navigation button and menu alignment

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -97,8 +97,19 @@
   cursor: pointer;
 }
 
+.back {
+  position: absolute;
+  width: 100px;
+  height: 50px;
+  right: 0;
+  cursor: pointer;
+}
+
 .button-container.open span {
   background: white;
+  width: 30px;
+  height: 1px;
+  left: 55px;
 }
 
 .button-container span {
@@ -126,14 +137,13 @@
 }
 
 .button-container.open span:nth-of-type(1) {
-  -webkit-transform: translate(0, 5px) rotate(225deg);
-  transform: translate(0, 5px) rotate(225deg);
+  -webkit-transform: translate(0, 5px) rotate(45deg);
+  transform: translate(0, 5px) rotate(45deg);
 }
 
 .button-container.open span:nth-of-type(2) {
-  -webkit-transform: translate(0, -5px) rotate(135deg);
-  transform: translate(0, -5px) rotate(135deg);
-  width: 30px;
+  -webkit-transform: translate(0, -5px) rotate(-45deg);
+  transform: translate(0, -5px) rotate(-45deg);
 }
 
 /* Mobile CSS */
@@ -150,15 +160,20 @@
   top: 0;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
-  transition: background-color 0.8s ease;
+  /*transition: background-color 0.8s ease;*/
   overflow: hidden;
+}
+
+.mobile-head.open {
+  z-index: 10000;
+  background-color: black !important;
 }
 
 .mobile-head .mobile-head-background-backdrop {
   position: fixed;
   top: 0;
   z-index: 999;
-  background-color: white;
+  /*background-color: white;*/
   width: 100%;
 }
 
@@ -166,18 +181,19 @@
   position: fixed;
   top: 0;
   z-index: 999;
-  background-image: url(../../assets/img/bg_web_l.png);
+  /*background-image: url(../../assets/img/bg_web_l.png);*/
+  background-color: black;
   width: 100%;
   height: 100vh;
-  background-size: cover;
-  background-position: right center;
+  /*background-size: cover;
+  background-position: right center;*/
   transition: opacity 3s;
   opacity: 0;
 }
 
-.mobile-head .mobile-head-background.active {
+/*.mobile-head .mobile-head-background.active {
   opacity: 1;
-}
+}*/
 
 .mobile-head .title {
   z-index: 1000;
